# document_analyzer

./: .gitignore  pyproject.toml  temp_2022%2005%2013%20Nagarro%20Q1%20earnings%20call%20vF2_batches.json  upload_financial_prompt.py
.cursor/: mcp.json
.github/workflows/: github_release.yml
document_analyzer/: main.py
document_analyzer/agents/: llm_factory.py
document_analyzer/ai/: document_analyze.py  document_analyzer.py  document_downloader.py  document_processor.py  prompt_store.py  utils.py
document_analyzer/ai/llm/: __init__.py  base.py
document_analyzer/config/: llm_config.py
document_analyzer/examples/: analyze_gcs_document.py  analyze_gcs_gemini.py  analyze_token_lengths.py  download_gft_publications.py  download_publications.py  process_gcs_document.py  upload_prompt.py
document_analyzer/gcp/: bq_client.py  config.py  gcs_client.py
